updating picture for test

--- a/sections/collection-featured.liquid
+++ b/sections/collection-featured.liquid
@@ -3,25 +3,25 @@
 <div class="grid-container">
     <div class="grid-item">
       <a href="#athleisure">
-        <img src="{{ 'collection-img.jpg' | asset_url }}" alt="Athleisure">
+        <img src="{{ 'featured.jpg' | asset_url }}" alt="Athleisure">
         <div class="caption">ATHLEISURE</div>
       </a>
     </div>
     <div class="grid-item">
       <a href="#outerwear">
-        <img src="{{ 'collection-img.jpg' | asset_url }}" alt="Outerwear">
+        <img src="{{ 'featured.jpg' | asset_url }}" alt="Outerwear">
         <div class="caption">OUTERWEAR</div>
       </a>
     </div>
     <div class="grid-item">
       <a href="#basics">
-        <img src="{{ 'collection-img.jpg' | asset_url }}" alt="Basics">
+        <img src="{{ 'featured.jpg' | asset_url }}" alt="Basics">
         <div class="caption">BASICS</div>
       </a>
     </div>
     <div class="grid-item">
       <a href="#final-markdown">
-        <img src="{{ 'collection-img.jpg' | asset_url }}" alt="Final Markdown">
+        <img src="{{ 'featured.jpg' | asset_url }}" alt="Final Markdown">
         <div class="caption">FINAL MARKDOWN</div>
       </a>
     </div>
