--- a/snippets/card-collection.liquid
+++ b/snippets/card-collection.liquid
@@ -44,7 +44,7 @@
     style="--ratio-percent: {{ 1 | divided_by: ratio | times: 100 }}%;"
   >
     <div
-      class="card__inner {% if card_style == 'standard' %}color-{{ card_color_scheme }} gradient{% endif %}{% if card_collection.featured_image or card_style == 'standard' %} ratio{% endif %}"
+      class="card__inner {% if card_style == 'standard' %}color-{{ card_color_scheme }} gradient{% endif %}{% if card_collection.featured_image or card_style == 'standard' %} ratio{% endif %} myTextRelative"
       style="--ratio-percent: {{ 1 | divided_by: ratio | times: 100 }}%;"
     >
       {%- if card_collection.featured_image -%}
@@ -117,7 +117,7 @@
       {%- endif -%}
     </div>
     {%- if card_collection != blank and card_style == 'card' or card_collection.featured_image -%}
-      <div class="card__content">
+      <div class="card__content myTextAbsolute">
         <div class="card__information">
           <h3 class="card__heading">
             <a
@@ -129,14 +129,16 @@
               class="full-unstyled-link"
             >
               {%- if card_collection.title != blank -%}
-                {{- card_collection.title | escape -}}
+                {% comment %} I hide the title {% endcomment %}
+                {% comment %} {{- card_collection.title | escape -}} {% endcomment %}
               {%- else -%}
                 {{ 'onboarding.collection_title' | t }}
               {%- endif -%}
               {%- if card_collection.featured_image or card_collection.description == blank -%}
-                <span class="icon-wrap">
+                 {% comment %} I hide the icon {% endcomment %}
+                {% comment %} <span class="icon-wrap">
                   {{- 'icon-arrow.svg' | inline_asset_content -}}
-                </span>
+                </span> {% endcomment %}
               {%- endif %}
             </a>
           </h3>
@@ -167,3 +169,21 @@
     {%- endif -%}
   </div>
 </div>
+
+{% comment %} <style>
+  .myTextRelative{
+    position: relative;
+  }
+  .myTextAbsolute{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+     width: 200px;
+    height: 100px;
+    display:flex;
+    justify-content: center;
+
+  }
+  
+</style> {% endcomment %}
