--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -258,7 +258,7 @@
       {%- for block in section.blocks -%}
         {%- case block.type -%}
           {%- when '@app' -%}
-            {% render block %}
+            {% comment %} {% render block %} {% endcomment %}
         {%- endcase -%}
       {%- endfor -%}
 
